--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,40 +1,44 @@
 /*------------------------------------*\
-	MAIN
+  MAIN
 \*------------------------------------*/
 html{
-	font-family:"Helvetica Neue", Arial, sans-serif;
-	color:#e4eef6;
-	background:#4a8ec2;
-	background:-moz-linear-gradient(-90deg,#5998c7,#4a8ec2) fixed;
-	background:-webkit-gradient(linear,left top,left bottom,from(#5998c7),to(#4a8ec2)) fixed;
+  font-family:"Helvetica Neue", Arial, sans-serif;
+  color:#e4eef6;
+  background:#4a8ec2;
+  background:-moz-linear-gradient(-90deg,#5998c7,#4a8ec2) fixed;
+  background:-webkit-gradient(linear,left top,left bottom,from(#5998c7),to(#4a8ec2)) fixed;
 }
 body{
-	background:none;
-	padding-top:50px;
-	text-shadow:0 -1px 0 rgba(0,0,0,0.5), 0 1px 0 rgba(255,255,255,0.25);
+  background:none;
+  padding-top:50px;
+  text-shadow:0 -1px 0 rgba(0,0,0,0.5), 0 1px 0 rgba(255,255,255,0.25);
 }
 #page{
-	margin:0 auto;
-	float:none;
-	text-align:center;
+  margin:0 auto;
+  float:none;
+  text-align:center;
 }
 
 .aplace
 {
   display: box;
   position: relative;
-  border: 2px solid white;
   width: 210px;
   min-height: 450px;
   height:450px;
   float: left;
-  padding:5px;
-  margin:10px;
-  /*box-shadow: 5px 5px 10px #E4EEF6;*/
-  padding: 5px;
-  color:#e4eef6;
-	background:#4a8ec2;
-	overflow:hidden;
+  margin: 0 20px 20px 0;
+  -moz-box-shadow: 3px 3px 8px #2B4D71;
+  -webkit-box-shadow: 3px 3px 8px #2B4D71;
+  box-shadow: 3px 3px 8px #2B4D71;
+  padding: 10px;
+  color:#333;
+  background:#fff;
+  overflow:hidden;
+  text-shadow: none;
+  border-radius: 6px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
 }
 
 .boldium
@@ -58,40 +62,52 @@ body{
 div.reviewactions
 {
   position: absolute;
-  bottom: 0;
+  bottom: 10px;
   cursor: pointer;
-  font-variant: small-caps;
 }
 
+div.reviewactions .check {
+  font-weight: normal;
+}
+div.reviewactions .check:hover {
+  background-color: #FFF2C6;
+}
+
+div.reviewactions .write {
+  font-weight: bold;
+}
+div.reviewactions .write:hover {
+  background-color: #FFF2C6;
+}
 
 
 
 
 /*------------------------------------*\
-	TYPE
+  TYPE
 \*------------------------------------*/
 h1{
-	font-weight:bold;
-	font-size:3em;
-	line-height:1;
-	display:inline;
+  font-weight:bold;
+  font-size:3em;
+  line-height:1;
+  display:inline;
 }
 
 h3{
-	font-weight:bold;
-	font-size:1.2em;
-	line-height:1;
-	margin-bottom:0px;
+  font-weight:bold;
+  font-size:1.2em;
+  line-height:1;
+  margin-bottom:0px;
 }
 a{
-	color:inherit;
+  color:inherit;
 }
 
 .areview
 {
-  margin-bottom:3px;
-  padding-bottom:3px;
-  border-bottom: 1px dotted white;
+  margin-bottom:5px;
+  padding-bottom:5px;
+  border-bottom: 1px solid #D2D2D2;
 }
 
 
@@ -99,10 +115,10 @@ a{
 
 
 /*------------------------------------*\
-	IMAGES
+  IMAGES
 \*------------------------------------*/
 #logo{
-	margin-bottom:1.5em;
+  margin-bottom:1.5em;
 }
 
 
@@ -110,7 +126,7 @@ a{
 
 
 /*------------------------------------*\
-	NARROW
+  NARROW
 \*------------------------------------*/
 /*
 CSS for tablets and narrower devices
@@ -128,7 +144,7 @@ CSS for tablets and narrower devices
 
 
 /*------------------------------------*\
-	MOBILE
+  MOBILE
 \*------------------------------------*/
 /*
 CSS for mobile devices.
@@ -141,7 +157,7 @@ Linearise it!
 
 @media (max-width: 720px){
 body{
-	font-size:0.75em;
+  font-size:0.75em;
 }
 }
 /*--- END MOBILE ---*/
